--- a/index.html
+++ b/index.html
@@ -33,19 +33,6 @@
 
 	<div id="my-timeline">
 	    <ul class="timeline-events">
-		<li data-timeline-node="{start:'2022-06-11 00:00:00',end:'2022-06-15 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">ISCA 2022</strong><p class="event-content">CCF Rank: A, When: Jun 11-15, 2022, Abstract Deadline: 2021-11-16 23:59:00 -12:00, Submission Deadline: 2021-11-23 23:59:00 -12:00, Notification Due: 2022-03-02</p></li>
-		<li data-timeline-node="{start:'2022-07-11 00:00:00',end:'2022-07-13 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">ATC 2022</strong><p class="event-content">CCF Rank: A, When: Jul 11-13, 2022, Abstract Deadline: 2022-01-06 23:59:59 &#43;00:00, Submission Deadline: 2022-01-13 23:59:59 &#43;00:00, Notification Due: 2022-04-29</p></li>
-		<li data-timeline-node="{start:'2022-07-10 00:00:00',end:'2022-07-14 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">DAC 2022</strong><p class="event-content">CCF Rank: A, When: Jul 10-14, 2022, Abstract Deadline: 2021-11-15 17:00:00 -08:00, Submission Deadline: 2021-11-22 17:00:00 -08:00, Notification Due: 2022-02-21</p></li>
-		<li data-timeline-node="{start:'2022-04-05 00:00:00',end:'2022-04-08 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">EuroSys 2022</strong><p class="event-content">CCF Rank: B, When: Apr 5-8, 2022, Abstract Deadline: 2021-10-01, Submission Deadline: 2021-10-09, Notification Due: 2022-01-20</p></li>
-		<li data-timeline-node="{start:'2022-06-06 00:00:00',end:'2022-06-10 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">SIGMETRICS 2022</strong><p class="event-content">CCF Rank: B, When: Jun 6-10, 2022, Abstract Deadline: 2022-01-26, Submission Deadline: 2022-02-02, Notification Due: 2022-03-28</p></li>
-		<li data-timeline-node="{start:'2022-05-30 00:00:00',end:'2022-06-03 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">IPDPS 2022</strong><p class="event-content">CCF Rank: B, When: May 30-Jun 3, 2022, Abstract Deadline: 2021-10-01 23:59:59 -12:00, Submission Deadline: 2021-10-08 23:59:59 -12:00, Notification Due: 2022-01-15</p></li>
-		<li data-timeline-node="{start:'2022-05-21 00:00:00',end:'2022-05-29 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">ICSE 2022</strong><p class="event-content">CCF Rank: A, When: May 21-29, 2022, Abstract Deadline: 2021-08-27, Submission Deadline: 2021-09-03 23:59:59, Notification Due: 2021-12-03</p></li>
-		<li data-timeline-node="{start:'2022-07-11 00:00:00',end:'2022-07-13 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">OSDI 2022</strong><p class="event-content">CCF Rank: A, When: Jul 11-13, 2022, Abstract Deadline: 2021-12-07 15:00:00 -07:00, Submission Deadline: 2021-12-14 15:00:00 -07:00, Notification Due: 2022-03-16</p></li>
-		<li data-timeline-node="{start:'2022-06-20 00:00:00',end:'2022-06-24 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">PLDI 2022</strong><p class="event-content">CCF Rank: A, When: Jun 20-24, 2022, Abstract Deadline: N/A, Submission Deadline: 2021-11-19, Notification Due: 2022-02-25</p></li>
-		<li data-timeline-node="{start:'2022-06-12 00:00:00',end:'2022-06-17 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">SIGMOD 2022</strong><p class="event-content">CCF Rank: A, When: Jun 12-17, 2022, Abstract Deadline: N/A, Submission Deadline: 2021-09-15, Notification Due: 2022-03-07</p></li>
-		<li data-timeline-node="{start:'2022-05-09 00:00:00',end:'2022-05-12 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">ICDE 2022</strong><p class="event-content">CCF Rank: A, When: May 9-12, 2022, Abstract Deadline: N/A, Submission Deadline: 2021-11-17 23:59:59 -08:00, Notification Due: 2021-11-10</p></li>
-		<li data-timeline-node="{start:'2022-04-11 00:00:00',end:'2022-04-14 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">SysML 2022</strong><p class="event-content">CCF Rank: , When: Apr 11-14, 2022, Abstract Deadline: N/A, Submission Deadline: 2021-10-08 19:59:59, Notification Due: 2022-01-15</p></li>
-		<li data-timeline-node="{start:'2022-05-15 00:00:00',end:'2022-05-18 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">FCCM 2022</strong><p class="event-content">CCF Rank: C, When: May 15-18, 2022, Abstract Deadline: 2022-01-03, Submission Deadline: 2022-01-10, Notification Due: 2022-03-21</p></li>
 	    </ul>
 	</div>
 
@@ -134,174 +121,6 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr class="item" style="background-color:white">
-							<th scope="row">
-								<a href="https://2022.eurosys.org/" target="_blank">EuroSys 2022</a>
-							</th>
-							<td>B</td>
-							<td>Oct 1, 2021</td>
-							<td>Oct 9, 2021</td>
-							<td>Jan 20, 2022</td>
-							<td>Apr 5-8, 2022</td>
-							<td>
-								In Progress
-							</td>
-						</tr>
-
-						<tr class="item" style="background-color:white">
-							<th scope="row">
-								<a href="https://mlsys.org/" target="_blank">SysML 2022</a>
-							</th>
-							<td></td>
-							<td>N/A</td>
-							<td>Oct 8, 2021</td>
-							<td>Jan 15, 2022</td>
-							<td>Apr 11-14, 2022</td>
-							<td>
-								<div data-countdown="2022-04-11 08:00:00"></div>
-							</td>
-						</tr>
-
-						<tr class="item" style="background-color:white">
-							<th scope="row">
-								<a href="https://icde2022.ieeecomputer.my/" target="_blank">ICDE 2022</a>
-							</th>
-							<td>A</td>
-							<td>N/A</td>
-							<td>Nov 17, 2021</td>
-							<td>Nov 10, 2021</td>
-							<td>May 9-12, 2022</td>
-							<td>
-								<div data-countdown="2022-05-09 08:00:00"></div>
-							</td>
-						</tr>
-
-						<tr class="item" style="background-color:white">
-							<th scope="row">
-								<a href="https://www.fccm.org/" target="_blank">FCCM 2022</a>
-							</th>
-							<td>C</td>
-							<td>Jan 3, 2022</td>
-							<td>Jan 10, 2022</td>
-							<td>Mar 21, 2022</td>
-							<td>May 15-18, 2022</td>
-							<td>
-								<div data-countdown="2022-05-15 08:00:00"></div>
-							</td>
-						</tr>
-
-						<tr class="item" style="background-color:white">
-							<th scope="row">
-								<a href="https://conf.researchr.org/home/icse-2022" target="_blank">ICSE 2022</a>
-							</th>
-							<td>A</td>
-							<td>Aug 27, 2021</td>
-							<td>Sep 3, 2021</td>
-							<td>Dec 3, 2021</td>
-							<td>May 21-29, 2022</td>
-							<td>
-								<div data-countdown="2022-05-21 08:00:00"></div>
-							</td>
-						</tr>
-
-						<tr class="item" style="background-color:white">
-							<th scope="row">
-								<a href="http://www.ipdps.org/" target="_blank">IPDPS 2022</a>
-							</th>
-							<td>B</td>
-							<td>Oct 1, 2021</td>
-							<td>Oct 8, 2021</td>
-							<td>Jan 15, 2022</td>
-							<td>May 30-Jun 3, 2022</td>
-							<td>
-								<div data-countdown="2022-05-30 08:00:00"></div>
-							</td>
-						</tr>
-
-						<tr class="item" style="background-color:white">
-							<th scope="row">
-								<a href="https://www.sigmetrics.org/sigmetrics2022" target="_blank">SIGMETRICS 2022</a>
-							</th>
-							<td>B</td>
-							<td>Jan 26, 2022</td>
-							<td>Feb 2, 2022</td>
-							<td>Mar 28, 2022</td>
-							<td>Jun 6-10, 2022</td>
-							<td>
-								<div data-countdown="2022-06-06 08:00:00"></div>
-							</td>
-						</tr>
-
-						<tr class="item" style="background-color:white">
-							<th scope="row">
-								<a href="https://iscaconf.org/isca2022" target="_blank">ISCA 2022</a>
-							</th>
-							<td>A</td>
-							<td>Nov 16, 2021</td>
-							<td>Nov 23, 2021</td>
-							<td>Mar 2, 2022</td>
-							<td>Jun 11-15, 2022</td>
-							<td>
-								<div data-countdown="2022-06-11 08:00:00"></div>
-							</td>
-						</tr>
-
-						<tr class="item" style="background-color:white">
-							<th scope="row">
-								<a href="https://2022.sigmod.org/" target="_blank">SIGMOD 2022</a>
-							</th>
-							<td>A</td>
-							<td>N/A</td>
-							<td>Sep 15, 2021</td>
-							<td>Mar 7, 2022</td>
-							<td>Jun 12-17, 2022</td>
-							<td>
-								<div data-countdown="2022-06-12 08:00:00"></div>
-							</td>
-						</tr>
-
-						<tr class="item" style="background-color:white">
-							<th scope="row">
-								<a href="http://pldi22.sigplan.org" target="_blank">PLDI 2022</a>
-							</th>
-							<td>A</td>
-							<td>N/A</td>
-							<td>Nov 19, 2021</td>
-							<td>Feb 25, 2022</td>
-							<td>Jun 20-24, 2022</td>
-							<td>
-								<div data-countdown="2022-06-20 08:00:00"></div>
-							</td>
-						</tr>
-
-						<tr class="item" style="background-color:white">
-							<th scope="row">
-								<a href="https://dac.com" target="_blank">DAC 2022</a>
-							</th>
-							<td>A</td>
-							<td>Nov 15, 2021</td>
-							<td>Nov 22, 2021</td>
-							<td>Feb 21, 2022</td>
-							<td>Jul 10-14, 2022</td>
-							<td>
-								<div data-countdown="2022-07-10 08:00:00"></div>
-							</td>
-						</tr>
-
-						<tr class="item" style="background-color:white">
-							<th scope="row">
-								<a href="https://www.usenix.org/conference/osdi22/" target="_blank">OSDI 2022</a>
-							</th>
-							<td>A</td>
-							<td>Dec 7, 2021</td>
-							<td>Dec 14, 2021</td>
-							<td>Mar 16, 2022</td>
-							<td>Jul 11-13, 2022</td>
-							<td>
-								<div data-countdown="2022-07-11 08:00:00"></div>
-							</td>
-						</tr>
-
 					</tbody>
 				</table>
 			</div>
@@ -327,6 +146,174 @@
 						</tr>
 					</thead>
 					<tbody>
+						<tr class="item" style="background-color:white">
+							<th scope="row">
+								<a href="https://dac.com" target="_blank">DAC 2022</a>
+							</th>
+							<td>A</td>
+							<td>Nov 15, 2021</td>
+							<td>Nov 22, 2021</td>
+							<td>Feb 21, 2022</td>
+							<td>Jul 10-14, 2022</td>
+							<td>
+								Ended
+							</td>
+						</tr>
+
+						<tr class="item" style="background-color:white">
+							<th scope="row">
+								<a href="https://www.usenix.org/conference/osdi22/" target="_blank">OSDI 2022</a>
+							</th>
+							<td>A</td>
+							<td>Dec 7, 2021</td>
+							<td>Dec 14, 2021</td>
+							<td>Mar 16, 2022</td>
+							<td>Jul 11-13, 2022</td>
+							<td>
+								Ended
+							</td>
+						</tr>
+
+						<tr class="item" style="background-color:white">
+							<th scope="row">
+								<a href="http://pldi22.sigplan.org" target="_blank">PLDI 2022</a>
+							</th>
+							<td>A</td>
+							<td>N/A</td>
+							<td>Nov 19, 2021</td>
+							<td>Feb 25, 2022</td>
+							<td>Jun 20-24, 2022</td>
+							<td>
+								Ended
+							</td>
+						</tr>
+
+						<tr class="item" style="background-color:white">
+							<th scope="row">
+								<a href="https://2022.sigmod.org/" target="_blank">SIGMOD 2022</a>
+							</th>
+							<td>A</td>
+							<td>N/A</td>
+							<td>Sep 15, 2021</td>
+							<td>Mar 7, 2022</td>
+							<td>Jun 12-17, 2022</td>
+							<td>
+								Ended
+							</td>
+						</tr>
+
+						<tr class="item" style="background-color:white">
+							<th scope="row">
+								<a href="https://iscaconf.org/isca2022" target="_blank">ISCA 2022</a>
+							</th>
+							<td>A</td>
+							<td>Nov 16, 2021</td>
+							<td>Nov 23, 2021</td>
+							<td>Mar 2, 2022</td>
+							<td>Jun 11-15, 2022</td>
+							<td>
+								Ended
+							</td>
+						</tr>
+
+						<tr class="item" style="background-color:white">
+							<th scope="row">
+								<a href="https://www.sigmetrics.org/sigmetrics2022" target="_blank">SIGMETRICS 2022</a>
+							</th>
+							<td>B</td>
+							<td>Jan 26, 2022</td>
+							<td>Feb 2, 2022</td>
+							<td>Mar 28, 2022</td>
+							<td>Jun 6-10, 2022</td>
+							<td>
+								Ended
+							</td>
+						</tr>
+
+						<tr class="item" style="background-color:white">
+							<th scope="row">
+								<a href="http://www.ipdps.org/" target="_blank">IPDPS 2022</a>
+							</th>
+							<td>B</td>
+							<td>Oct 1, 2021</td>
+							<td>Oct 8, 2021</td>
+							<td>Jan 15, 2022</td>
+							<td>May 30-Jun 3, 2022</td>
+							<td>
+								Ended
+							</td>
+						</tr>
+
+						<tr class="item" style="background-color:white">
+							<th scope="row">
+								<a href="https://conf.researchr.org/home/icse-2022" target="_blank">ICSE 2022</a>
+							</th>
+							<td>A</td>
+							<td>Aug 27, 2021</td>
+							<td>Sep 3, 2021</td>
+							<td>Dec 3, 2021</td>
+							<td>May 21-29, 2022</td>
+							<td>
+								Ended
+							</td>
+						</tr>
+
+						<tr class="item" style="background-color:white">
+							<th scope="row">
+								<a href="https://www.fccm.org/" target="_blank">FCCM 2022</a>
+							</th>
+							<td>C</td>
+							<td>Jan 3, 2022</td>
+							<td>Jan 10, 2022</td>
+							<td>Mar 21, 2022</td>
+							<td>May 15-18, 2022</td>
+							<td>
+								Ended
+							</td>
+						</tr>
+
+						<tr class="item" style="background-color:white">
+							<th scope="row">
+								<a href="https://icde2022.ieeecomputer.my/" target="_blank">ICDE 2022</a>
+							</th>
+							<td>A</td>
+							<td>N/A</td>
+							<td>Nov 17, 2021</td>
+							<td>Nov 10, 2021</td>
+							<td>May 9-12, 2022</td>
+							<td>
+								Ended
+							</td>
+						</tr>
+
+						<tr class="item" style="background-color:white">
+							<th scope="row">
+								<a href="https://mlsys.org/" target="_blank">SysML 2022</a>
+							</th>
+							<td></td>
+							<td>N/A</td>
+							<td>Oct 8, 2021</td>
+							<td>Jan 15, 2022</td>
+							<td>Apr 11-14, 2022</td>
+							<td>
+								Ended
+							</td>
+						</tr>
+
+						<tr class="item" style="background-color:white">
+							<th scope="row">
+								<a href="https://2022.eurosys.org/" target="_blank">EuroSys 2022</a>
+							</th>
+							<td>B</td>
+							<td>Oct 1, 2021</td>
+							<td>Oct 9, 2021</td>
+							<td>Jan 20, 2022</td>
+							<td>Apr 5-8, 2022</td>
+							<td>
+								Ended
+							</td>
+						</tr>
+
 						<tr class="item" style="background-color:white">
 							<th scope="row">
 								<a href="https://www.date-conference.com/" target="_blank">DATE 2022</a>
@@ -732,7 +719,7 @@
 	<div class="clear-both"></div>
 	<div id="footer">
 		<div class="info">
-			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on Apr 5, 2022.</p>
+			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on Oct 25, 2022.</p>
 		</div>
 	</div>
 
