--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
 		<li data-timeline-node="{start:'2023-06-16 00:00:00',end:'2023-06-19 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">SPAA 2023</strong><p class="event-content">CCF Rank: B, When: Jun 16-19, 2023, Abstract Deadline: 2023-01-12 23:59:59 -12:00, Submission Deadline: 2023-01-16 23:59:59 -12:00, Notification Due: 2023-03-22</p></li>
 		<li data-timeline-node="{start:'2023-06-19 00:00:00',end:'2023-06-23 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">PODC 2023</strong><p class="event-content">CCF Rank: B, When: Jun 19-23, 2023, Abstract Deadline: 2023-01-06 23:59:59 -12:00, Submission Deadline: 2023-01-10 23:59:59 -12:00, Notification Due: 2023-03-30</p></li>
 		<li data-timeline-node="{start:'2023-07-09 00:00:00',end:'2023-07-13 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">DAC 2023</strong><p class="event-content">CCF Rank: A, When: Jul 9-13, 2023, Abstract Deadline: 2022-11-14 17:00:00 -08:00, Submission Deadline: 2022-11-21 17:00:00 -08:00, Notification Due: 2023-02-23</p></li>
-		<li data-timeline-node="{start:'2023-04-17 00:00:00',end:'2023-04-19 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">DATE 2023</strong><p class="event-content">CCF Rank: B, When: Apr 17-19, 2023, Abstract Deadline: 2022-09-18 23:59:59 -12:00, Submission Deadline: 2022-09-25 23:59:59 -12:00, Notification Due: 2022-11-11</p></li>
 		<li data-timeline-node="{start:'2023-05-09 00:00:00',end:'2023-05-12 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">EuroSys (Spring) 2023</strong><p class="event-content">CCF Rank: B, When: May 9-12, 2023, Abstract Deadline: 2022-05-11 23:59:59 -12:00, Submission Deadline: 2022-05-18 23:59:59 -12:00, Notification Due: 2022-08-10 23:59:59 -12:00</p></li>
 		<li data-timeline-node="{start:'2023-05-09 00:00:00',end:'2023-05-12 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">EuroSys (Fall) 2023</strong><p class="event-content">CCF Rank: B, When: May 9-12, 2023, Abstract Deadline: 2022-10-12, Submission Deadline: 2022-10-19, Notification Due: 2023-01-18</p></li>
 		<li data-timeline-node="{start:'2023-06-16 00:00:00',end:'2023-06-23 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">HPDC* 2023</strong><p class="event-content">CCF Rank: B, When: Jun 16-23, 2023, Abstract Deadline: 2023-01-20 23:59:59 -12:00, Submission Deadline: 2023-01-27 23:59:59 -12:00, Notification Due: 2023-03-31</p></li>
@@ -157,20 +156,6 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr class="item" style="background-color:white">
-							<th scope="row">
-								<a href="https://www.date-conference.com/" target="_blank">DATE 2023</a>
-							</th>
-							<td>B</td>
-							<td>Sep 18, 2022</td>
-							<td>Sep 25, 2022</td>
-							<td>Nov 11, 2022</td>
-							<td>Apr 17-19, 2023</td>
-							<td>
-								In Progress
-							</td>
-						</tr>
-
 						<tr class="item" style="background-color:white">
 							<th scope="row">
 								<a href="http://2023.rtas.org/" target="_blank">RTAS 2023</a>
@@ -448,6 +433,20 @@
 						</tr>
 					</thead>
 					<tbody>
+						<tr class="item" style="background-color:white">
+							<th scope="row">
+								<a href="https://www.date-conference.com/" target="_blank">DATE 2023</a>
+							</th>
+							<td>B</td>
+							<td>Sep 18, 2022</td>
+							<td>Sep 25, 2022</td>
+							<td>Nov 11, 2022</td>
+							<td>Apr 17-19, 2023</td>
+							<td>
+								Ended
+							</td>
+						</tr>
+
 						<tr class="item" style="background-color:white">
 							<th scope="row">
 								<a href="https://icde2023.ics.uci.edu/" target="_blank">ICDE 2023</a>
@@ -825,7 +824,7 @@
 	<div class="clear-both"></div>
 	<div id="footer">
 		<div class="info">
-			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on Apr 17, 2023.</p>
+			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on Apr 20, 2023.</p>
 		</div>
 	</div>
 
