--- a/index.html
+++ b/index.html
@@ -33,8 +33,6 @@
 
 	<div id="my-timeline">
 	    <ul class="timeline-events">
-		<li data-timeline-node="{start:'2023-04-30 17:59:59',end:'2023-05-07 17:59:59',row:1,bgColor:'Wheat',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">SOSP* 2023</strong><p class="event-content">CCF Rank: A, When: Oct 23-26, 2023, Abstract Deadline: 2023-04-30 17:59:59 HKT, Submission Deadline: 2023-05-07 17:59:59 HKT, Notification Due: 2023-08-09</p></li>
-		<li data-timeline-node="{start:'2023-10-23 00:00:00',end:'2023-10-26 23:59:59',row:3,bgColor:'#e05f1a',color:'White', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">SOSP* 2023</strong><p class="event-content">CCF Rank: A, When: Oct 23-26, 2023, Abstract Deadline: 2023-04-30 02:59:59 -07:00, Submission Deadline: 2023-05-07 02:59:59 -07:00, Notification Due: 2023-08-09</p></li>
 		<li data-timeline-node="{start:'2023-06-17 00:00:00',end:'2023-06-23 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">ISCA 2023</strong><p class="event-content">CCF Rank: A, When: Jun 17-23, 2023, Abstract Deadline: 2022-11-14 23:59:00 -12:00, Submission Deadline: 2022-11-21 23:59:00 -12:00, Notification Due: 2023-03-09</p></li>
 		<li data-timeline-node="{start:'2023-07-10 00:00:00',end:'2023-07-12 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">ATC 2023</strong><p class="event-content">CCF Rank: A, When: Jul 10-12, 2023, Abstract Deadline: 2023-01-05 23:59:59 &#43;00:00, Submission Deadline: 2023-01-12 23:59:59 &#43;00:00, Notification Due: 2023-04-28</p></li>
 		<li data-timeline-node="{start:'2023-06-16 00:00:00',end:'2023-06-19 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">SPAA 2023</strong><p class="event-content">CCF Rank: B, When: Jun 16-19, 2023, Abstract Deadline: 2023-01-12 23:59:59 -12:00, Submission Deadline: 2023-01-16 23:59:59 -12:00, Notification Due: 2023-03-22</p></li>
@@ -49,6 +47,7 @@
 		<li data-timeline-node="{start:'2023-05-14 00:00:00',end:'2023-05-20 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">ICSE 2023</strong><p class="event-content">CCF Rank: A, When: May 14-20, 2023, Abstract Deadline: N/A, Submission Deadline: 2022-09-01 23:59:59 -12:00, Notification Due: 2022-12-09</p></li>
 		<li data-timeline-node="{start:'2023-07-10 00:00:00',end:'2023-07-12 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">OSDI 2023</strong><p class="event-content">CCF Rank: A, When: Jul 10-12, 2023, Abstract Deadline: 2022-12-06 22:59:00 &#43;00:00, Submission Deadline: 2022-12-13 22:59:00 &#43;00:00, Notification Due: 2022-03-23</p></li>
 		<li data-timeline-node="{start:'2023-06-19 00:00:00',end:'2023-06-23 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">PLDI 2023</strong><p class="event-content">CCF Rank: A, When: Jun 19-23, 2023, Abstract Deadline: N/A, Submission Deadline: 2022-11-10, Notification Due: 2023-02-23</p></li>
+		<li data-timeline-node="{start:'2023-10-23 00:00:00',end:'2023-10-26 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">SOSP* 2023</strong><p class="event-content">CCF Rank: A, When: Oct 23-26, 2023, Abstract Deadline: 2023-04-30 02:59:59 -07:00, Submission Deadline: 2023-05-07 02:59:59 -07:00, Notification Due: 2023-08-09</p></li>
 		<li data-timeline-node="{start:'2023-06-18 00:00:00',end:'2023-06-23 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">SIGMOD-3 2023</strong><p class="event-content">CCF Rank: A, When: Jun 18-23, 2023, Abstract Deadline: N/A, Submission Deadline: 2022-10-15, Notification Due: 2023-02-23</p></li>
 		<li data-timeline-node="{start:'2023-08-28 00:00:00',end:'2023-09-01 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">VLDB* 2023</strong><p class="event-content">CCF Rank: A, When: Aug 28-Sep 1, 2023, Abstract Deadline: 2023-02-20, Submission Deadline: 2023-03-01, Notification Due: 2023-04-15</p></li>
 		<li data-timeline-node="{start:'2023-06-04 00:00:00',end:'2023-06-08 23:59:59',row:2,bgColor:'#63bb55',color:'Black', extend:'{toggle:\'tooltip\'}'}"><strong class="event-label">SysML 2023</strong><p class="event-content">CCF Rank: , When: Jun 4-8, 2023, Abstract Deadline: N/A, Submission Deadline: 2022-10-28 19:59:59, Notification Due: 2023-02-17</p></li>
@@ -117,20 +116,6 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr class="item" style="background-color:Wheat">
-							<th scope="row">
-								<a href="https://sosp2023.mpi-sws.org/" target="_blank">SOSP* 2023</a>
-							</th>
-							<td>A</td>
-							<td>Apr 30, 2023</td>
-							<td>May 7, 2023</td>
-							<td>Aug 9, 2023</td>
-							<td>Oct 23-26, 2023</td>
-							<td>
-								<div data-countdown="2023-05-07 17:59:59"></div>
-							</td>
-						</tr>
-
 					</tbody>
 				</table>
 			</div>
@@ -405,6 +390,20 @@
 							<td>Aug 28-Sep 1, 2023</td>
 							<td>
 								<div data-countdown="2023-08-28 08:00:00"></div>
+							</td>
+						</tr>
+
+						<tr class="item" style="background-color:white">
+							<th scope="row">
+								<a href="https://sosp2023.mpi-sws.org/" target="_blank">SOSP* 2023</a>
+							</th>
+							<td>A</td>
+							<td>Apr 30, 2023</td>
+							<td>May 7, 2023</td>
+							<td>Aug 9, 2023</td>
+							<td>Oct 23-26, 2023</td>
+							<td>
+								<div data-countdown="2023-10-23 08:00:00"></div>
 							</td>
 						</tr>
 
@@ -824,7 +823,7 @@
 	<div class="clear-both"></div>
 	<div id="footer">
 		<div class="info">
-			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on Apr 20, 2023.</p>
+			<p>Theme designed by <a href="https://dblp.uni-trier.de/">dblp</a>, customized by <a href="https://atom.im">atom.im</a>. Last updated on May 7, 2023.</p>
 		</div>
 	</div>
 
